--- a/App_Banco_Digital/App_Banco_Digital/View/Modules/Outros/Home.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/View/Modules/Outros/Home.xaml
@@ -6,7 +6,7 @@
 
     <ContentPage.ToolbarItems>
 
-        <ToolbarItem x:Name="btn_menu" Priority="0" Order="Primary"/>
+        <ToolbarItem x:Name="btn_menu" Priority="0" Order="Primary" Clicked="btn_menu_Clicked"/>
 
     </ContentPage.ToolbarItems>
 
@@ -16,6 +16,14 @@
 
             <Setter Property="CornerRadius" Value="15"/>
             <Setter Property="BackgroundColor" Value="#FFFFFF"/>
+            <Setter Property="Padding" Value="15"/>
+
+        </Style>
+
+        <Style x:Key="Titulos_Mini_Botoes" TargetType="Label">
+
+            <Setter Property="HorizontalTextAlignment" Value="Center"/>
+            <Setter Property="TextColor" Value="#FFFFFF"/>
 
         </Style>
         
@@ -25,7 +33,7 @@
 
         <ScrollView Orientation="Vertical">
 
-            <Grid ColumnDefinitions="*" RowDefinitions="*,100,300" Padding="10" RowSpacing="20">
+            <Grid ColumnDefinitions="*" RowDefinitions="*,125,300" Padding="10" RowSpacing="20">
 
                 <StackLayout Grid.Column="0" Grid.Row="0">
 
@@ -39,23 +47,35 @@
 
                 <ScrollView Orientation="Horizontal" Grid.Column="0" Grid.Row="1">
 
-                    <Grid ColumnDefinitions="100,100,100,100" RowDefinitions="*">
+                    <Grid ColumnDefinitions="100,100,100,100" RowDefinitions="*,20" Padding="5">
 
                         <ImageButton x:Name="imgbtn_pagar" Clicked="imgbtn_pagar_Clicked"
                                      Grid.Column="0" Grid.Row="0"
                                      Style="{ StaticResource Mini_Botoes }"/>
 
+                        <Label Text="Pagar" Grid.Column="0" Grid.Row="1"
+                               Style="{StaticResource Titulos_Mini_Botoes  }"/>
+
                         <ImageButton x:Name="imgbtn_pix" Clicked="imgbtn_pix_Clicked"
                                      Grid.Column="1" Grid.Row="0"
                                      Style="{ StaticResource Mini_Botoes }"/>
+
+                        <Label Text="Pix" Grid.Column="1" Grid.Row="1"
+                               Style="{StaticResource Titulos_Mini_Botoes  }"/>
 
                         <ImageButton x:Name="imgbtn_trasnferir" Clicked="imgbtn_trasnferir_Clicked"
                                      Grid.Column="2" Grid.Row="0"
                                      Style="{ StaticResource Mini_Botoes }"/>
 
+                        <Label Text="Transferir" Grid.Column="2" Grid.Row="1"
+                               Style="{StaticResource Titulos_Mini_Botoes  }"/>
+
                         <ImageButton x:Name="imgbtn_cobrar" Clicked="imgbtn_cobrar_Clicked"
                                      Grid.Column="3" Grid.Row="0"
                                      Style="{ StaticResource Mini_Botoes }"/>
+
+                        <Label Text="Cobrar" Grid.Column="3" Grid.Row="1"
+                               Style="{StaticResource Titulos_Mini_Botoes  }"/>
 
                     </Grid>
                     
