--- a/App_Banco_Digital/App_Banco_Digital/View/Modules/ChavePix/CadastroChavePix.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/View/Modules/ChavePix/CadastroChavePix.xaml
@@ -11,7 +11,7 @@
 
                 <StackLayout Grid.Row="0">
 
-                    <Label Text="Cadastre-se:" FontSize="40"
+                    <Label Text="Chaves Pix:" FontSize="40"
                            Style="{ StaticResource Titulos_Cadastros }"/>
 
                     <Line X1="0" X2="1000" Y1="0" Y2="0"
@@ -20,6 +20,17 @@
                     <StackLayout>
 
                         <Label Text="Crie e edite chaves para receber transações via Pix."/>
+
+                        <RadioButton Content="CPF" GroupName="Tipo" Margin="0,10,0,0"/>
+                        <RadioButton Content="RG" GroupName="Tipo"/>
+                        <RadioButton Content="Telefone" GroupName="Tipo"/>
+                        <RadioButton Content="E-mail" GroupName="Tipo"/>
+                        <RadioButton Content="Aleatória" GroupName="Tipo" Margin="0,0,0,10"/>
+
+                        <Label Text="Chaves já cadastradas:"/>
+
+                        <ListView x:Name="lst_listagem_chaves_pix" HasUnevenRows="True"
+                                  BackgroundColor="#FFFFFF" Margin="0"/>
 
                     </StackLayout>
 
