--- a/App_Banco_Digital/App_Banco_Digital/View/Modules/Outros/Menu.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/View/Modules/Outros/Menu.xaml
@@ -10,12 +10,23 @@
 
             <ContentPage.Resources>
 
+                <Style x:Key="Botoes_Principais_Menu" TargetType="Button">
+
+                    <Setter Property="BackgroundColor" Value="#00285F"/>
+                    <Setter Property="CornerRadius" Value="50"/>
+                    <Setter Property="TextColor" Value="#FFFFFF"/>
+                    <Setter Property="FontAttributes" Value="Bold"/>
+                    <Setter Property="BorderWidth" Value="0"/>
+
+                </Style>
+
                 <Style x:Key="Botoes_Menu" TargetType="Button">
 
                     <Setter Property="BackgroundColor" Value="Transparent"/>
-                    <Setter Property="CornerRadius" Value="20"/>
+                    <Setter Property="CornerRadius" Value="50"/>
                     <Setter Property="BorderWidth" Value="2"/>
                     <Setter Property="BorderColor" Value="#00285F"/>
+                    <Setter Property="TextColor" Value="#000000"/>
                     <Setter Property="FontAttributes" Value="Bold"/>
 
                 </Style>
@@ -24,16 +35,21 @@
 
             <ContentPage.Content>
 
-                <Grid RowDefinitions="200,*,50" Padding="10,15,10,15">
+                <Grid RowDefinitions="200,50,*,50" Padding="10,15,10,15">
 
-                    <Frame Grid.Column="0"  Grid.Row="0" CornerRadius="15"
+                    <Frame Grid.Column="0"  Grid.Row="0" CornerRadius="15" Margin="0,0,0,10"
                            BorderColor="#00285F" BackgroundColor="#FFFFFF">
 
                         <Image x:Name="img_logo" Aspect="AspectFit"/>
 
                     </Frame>
 
-                    <ScrollView Grid.Column="0" Grid.Row="1" Padding="0,10,0,10"
+                    <Button x:Name="btn_home" Text="Tela Inicial"
+                            Grid.Column="0" Grid.Row="1"
+                            Clicked="btn_home_Clicked"
+                            Style="{ StaticResource Botoes_Principais_Menu }"/>
+
+                    <ScrollView Grid.Column="0" Grid.Row="2" Padding="0,10,0,10"
                                 VerticalOptions="Start" BackgroundColor="Transparent">
 
                         <Button x:Name="btn_chaves_pix" Text="Chaves Pix"
@@ -42,11 +58,10 @@
 
                     </ScrollView>
 
-                    <Button x:Name="btn_sair" Text="SAIR" FontAttributes="Bold"
-                            CornerRadius="50" TextColor="#FFFFFF"
-                            BackgroundColor="#00285F" BorderWidth="0"
-                            Grid.Column="0" Grid.Row="2"
-                            Clicked="btn_sair_Clicked"/>
+                    <Button x:Name="btn_sair" Text="Sair"
+                            Grid.Column="0" Grid.Row="3"
+                            Clicked="btn_sair_Clicked"
+                            Style="{ StaticResource Botoes_Principais_Menu }"/>
 
                 </Grid>
 
