--- a/App_Banco_Digital/App_Banco_Digital/View/Modules/Correntista/CadastroCorrentista.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/View/Modules/Correntista/CadastroCorrentista.xaml
@@ -3,20 +3,20 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="App_Banco_Digital.View.Modules.Correntista.CadastroCorrentista"
              Style="{ StaticResource Estilo_Digio }">
-    
+
     <ContentPage.Content>
-        
-        <ScrollView Padding="20">
 
-            <Grid RowDefinitions="*,100">
+        <Grid ColumnDefinitions="*" RowDefinitions="*,100" Padding="20">
 
-                <StackLayout Grid.Row="0">
+            <StackLayout Grid.Row="0">
 
-                    <Label Text="Cadastre-se:" FontSize="40"
-                           Style="{ StaticResource Titulos_Cadastros }"/>
+                <Label Text="Cadastre-se:" FontSize="40"
+                    Style="{ StaticResource Titulos_Cadastros }"/>
 
-                    <Line X1="0" X2="1000" Y1="0" Y2="0"
-                          Stroke="#000000" Margin="0,0,0,20"/>
+                <Line X1="0" X2="1000" Y1="0" Y2="0"
+                    Stroke="#000000" Margin="0,0,0,20"/>
+
+                <ScrollView Orientation="Vertical">
 
                     <StackLayout>
 
@@ -37,20 +37,20 @@
 
                     </StackLayout>
 
-                </StackLayout>
+                </ScrollView>
 
-                <StackLayout Grid.Row="1" VerticalOptions="Center">
+            </StackLayout>
 
-                    <Button x:Name="btn_cadastrar_correntista" Text="Cadastrar"
-                            Clicked="btn_cadastrar_correntista_Clicked"
-                            Style="{ StaticResource Botoes_Cadastros }"/>
+            <StackLayout Grid.Row="1" VerticalOptions="Center">
 
-                </StackLayout>
+                <Button x:Name="btn_cadastrar_correntista" Text="Cadastrar"
+                        Clicked="btn_cadastrar_correntista_Clicked"
+                        Style="{ StaticResource Botoes_Cadastros }"/>
 
-            </Grid>
+            </StackLayout>
 
-        </ScrollView>
-        
+        </Grid>
+
     </ContentPage.Content>
     
 </ContentPage>
