--- a/App_Banco_Digital/App_Banco_Digital/View/Modules/ChavePix/CadastroChavePix.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/View/Modules/ChavePix/CadastroChavePix.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="App_Banco_Digital.View.Modules.ChavePix.CadastroChavePix">
+             x:Class="App_Banco_Digital.View.Modules.ChavePix.CadastroChavePix"
+             Style="{ StaticResource Estilo_Digio }">
 
     <ContentPage.Content>
 
@@ -23,11 +24,20 @@
 
                             <Label Text="Crie e edite chaves para receber transações via Pix."/>
 
-                            <RadioButton Content="CPF" GroupName="Tipo" Margin="0,10,0,0"/>
-                            <RadioButton Content="RG" GroupName="Tipo"/>
-                            <RadioButton Content="Telefone" GroupName="Tipo"/>
-                            <RadioButton Content="E-mail" GroupName="Tipo"/>
-                            <RadioButton Content="Aleatória" GroupName="Tipo" Margin="0,0,0,10"/>
+                            <RadioButton x:Name="rdbtn_cpf" Content="CPF" GroupName="Tipo"
+                                         Margin="0,10,0,0" Value="0" CheckedChanged="rdbtn_CheckedChanged"/>
+                            
+                            <RadioButton x:Name="rdbtn_cnpj" Content="CNPJ"
+                                         GroupName="Tipo" Value="1" CheckedChanged="rdbtn_CheckedChanged"/>
+                            
+                            <RadioButton x:Name="rdbtn_telefone" Content="Telefone"
+                                         GroupName="Tipo" Value="2" CheckedChanged="rdbtn_CheckedChanged"/>
+                            
+                            <RadioButton x:Name="rdbtn_email" Content="E-mail"
+                                         GroupName="Tipo" Value="3" CheckedChanged="rdbtn_CheckedChanged"/>
+                            
+                            <RadioButton x:Name="rdbtn_aleatoria" Content="Aleatória" GroupName="Tipo"
+                                         Margin="0,0,0,10" Value="4" CheckedChanged="rdbtn_CheckedChanged"/>
 
                             <Label Text="Chaves já cadastradas:" Margin="0,0,0,20"/>
 
