--- a/App_Banco_Digital/App_Banco_Digital/View/Modules/Correntista/CadastroCorrentista.xaml
+++ b/App_Banco_Digital/App_Banco_Digital/View/Modules/Correntista/CadastroCorrentista.xaml
@@ -22,11 +22,15 @@
 
                         <Label Text="Nome:" Style="{ StaticResource Titulos_Cadastros }"/>
                         <Entry x:Name="txt_nome_correntista" Placeholder="Crie um nome de usuário"
-                               MaxLength="50" Style="{ StaticResource Campos_Cadastros }"/>
+                               MaxLength="255" Style="{ StaticResource Campos_Cadastros }"/>
 
                         <Label Text="CPF:" Style="{ StaticResource Titulos_Cadastros }"/>
                         <Entry x:Name="txt_cpf_correntista" Placeholder="Insira seu CPF"
                                MaxLength="14" Style="{ StaticResource Campos_Cadastros }"/>
+
+                        <Label Text="E-mail:" Style="{ StaticResource Titulos_Cadastros }"/>
+                        <Entry x:Name="txt_email_correntista" Placeholder="Insira seu E-mail"
+                               MaxLength="75" Style="{ StaticResource Campos_Cadastros }"/>
 
                         <Label Text="Data de Nascimento:" Style="{ StaticResource Titulos_Cadastros }"/>
                         <DatePicker x:Name="dtpck_data_nascimento_correntista" Format="dd/MM/yyyy"/>
